Update vignettes index

--- a/vignettes/filetypes.Rmd
+++ b/vignettes/filetypes.Rmd
@@ -4,7 +4,7 @@ author: "Jianfeng Li"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{configr}
+  %\VignetteIndexEntry{Configuration file types}
   %\VignetteEngine{knitr::rmarkdown}
   \usepackage[utf8]{inputenc}
 ---
