--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2017-11-28 Li Jianfeng <lee_jianfeng@sjtu.edu.cn>
+
+		* is.*.file only return TRUE or FALSE
+
 2017-11-21 Li Jianfeng <lee_jianfeng@sjtu.edu.cn>
 
 		* fetch.config be added in R/fetch.R
