fix latest stringi raised warnings in extra.list parse

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2018-05-29 Li Jianfeng <lee_jianfeng@sjtu.edu.cn>
+
+		* fix warning in extra.list parse using latest stringi
+
 2018-05-03 Li Jianfeng <lee_jianfeng@sjtu.edu.cn>
 
 		* update vignettes theme
