add config.help function

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2018-06-22 Li Jianfeng <lee_jianfeng@sjtu.edu.cn>
+
+		* add function str2config in R/read.R
+		* add function config.help in R/help.R
+
 2018-05-29 Li Jianfeng <lee_jianfeng@sjtu.edu.cn>
 
 		* fix warning in extra.list parse using latest stringi
