--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2018-09-19 Li Jianfeng <lee_jianfeng@sjtu.edu.cn>
+
+		* fix failed names selectioon in config.help
+
 2018-06-22 Li Jianfeng <lee_jianfeng@sjtu.edu.cn>
 
 		* add function str2config in R/read.R
