add filename check and update .travis.yml

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2020-07-17 Li Jianfeng <lee_jianfeng@sjtu.edu.cn>
+
+		* add filename check
+
 2018-11-13 Li Jianfeng <lee_jianfeng@sjtu.edu.cn>
 
 		* add params global.vars.field
